[project]
name = "lerobot_policy_audiosmolvla"
version = "0.1.0"
dependencies = [
    # your policy-specific dependencies
    "lerobot",
    "torch",
    "lerobot[smolvla]",
    "lerobot[audio]"

]
requires-python = ">= 3.10"
description = "Audio fused smolVLA"


[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["lerobot_policy_my_custom_policy*"]
